# procfunc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  integration-test.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.rst
examples/transpile_simple_chair/: simple_chair.blend  transpiled_code.py
experiments/: EXPERIMENTS.md  blender_3_6.sh  infinigen125_requirements.txt  install_blendergym_bl36.sh  install_procfunc_bl42.sh  requirements.txt
experiments/commands/: geometry_editing.sh  geometry_fromscratch.sh  material_editing.sh  material_fromscratch.sh
experiments/scripts/: bgym_pipeline_render.py  create_blender_nodes_interface.py  create_procfunc_incontext_reference.py  csv_to_latex.py  evaluate_results.py  executable_materials_to_procfunc.py  format_chat_json.py  generate_benchdata_procfunc.py  pipeline_render_script.py  reexecute_ifg_examples.py  run_llm_inference.py  transpile_blend_to_ifg.py  visualize_bgym_pf_start_goal.py  visualize_llm_task_steps.py
scripts/update_greps/: README.md  to_0.31.yml  to_0.32.yml  to_0.33.yml  to_0.34.yml
src/procfunc/: __init__.py  color.py  context.py  control.py  random.py  types.py
tests/: conftest.py  test_asset.py  test_bpy_data_cleanup.py  test_cli_transpile.py  test_codegen.py  test_codegen_matrix.py  test_compute_graph.py  test_dedup_names.py  test_node_function.py  test_ops.py  test_pytree.py  test_random.py  test_trace.py  test_transforms.py
tests/integration_test/: pick_free_gpu.py  (+2 more)
(+134 files in other folders)
